<resources>
    <string name="app_name">GoFoodie</string>
    <string name="go_foodie">Go Foodie</string>
    <string name="delectable">…delectable and savory meals at your doorstep</string>


    =======
    <string name="our_menu">MENU</string>
    <string name="swallow">SWALLOW</string>
    <string name="soup_stew">Soup and Stew</string>
    <string name="drinks">Drinks</string>
    <string name="meat">Meat</string>
    <string name="logout">Logout</string>
    <string name="help_information"><![CDATA[Help & Information]]></string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="signin_page">SignIn Page</string>
    <string name="sign_up_page">Sign Up Page</string>
    >>>>>>> ff9e172440f40de96e9f067ed105ab70b1776e19
    <string name="snacks">SNACKS</string>
    <string name="info_text">about_text</string>
    <string name="team">team_mem</string>
    <string name="go_foodieA">Go Foodie</string>
    <string name="sub_total">Sub-Total</string>
    <string name="shipping_fee">Shipping Fee</string>
    <string name="order_summary">Order Summary</string>
    <string name="address">address</string>
    <string name="name">name</string>
    <string name="_080xxxxxxxx">080xxxxxxxx</string>
    <string name="naira">₦</string>
    <string name="soup">SOUP AND STEW</string>
    <string name="drink">DRINK</string>
    <string name="Meat">MEAT</string>

</resources>
