<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <TextView
            android:id="@+id/about_title"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="6dp"
            android:background="#C15B11"
            android:fontFamily="@font/poppins"
            android:padding="8dp"
            android:text="@string/go_foodie"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="50sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_info"
            android:layout_width="0dp"
            android:layout_height="155dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/info_text"
            android:justificationMode="inter_word"
            android:text="Go-Foodie is an African foods online store that gives you the satisfaction of ordering African delicacies from the comfort of your home or office and have it delivered to you just in time to enjoy the savoury and delicious meal you love so much!

We are committed to serving you excellent meal at Go-Foodie and we look forward to feeding you."
            android:textColor="#070707"
            android:textSize="16sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.536"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_title"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/about_team"
            android:layout_width="405dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:background="#C15B11"
            android:fontFamily="@font/poppins"
            android:hint="@string/team"
            android:padding="8dp"
            android:text="Meet Our Team"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_info" />

        <ProgressBar
            android:id="@+id/pbar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/webView"
            app:layout_constraintStart_toStartOf="@+id/webView"
            app:layout_constraintTop_toTopOf="@+id/webView" />

        <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_team" >

        </WebView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>